# axum-rest-api-demo

./: Cargo.toml  README.md
src/: main.rs
