[package]
name = "simple-api-demo"
version = "0.1.0"
edition = "2024"

[dependencies]

# Web framework
axum = "0.8.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLx with SQLite support
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "macros"] }

# Error handling
thiserror = "2.0.12"

# OpenAPI + Swagger UI
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }

# Middleware
tower = "0.5.2"

# CORS, tracing, timeout
tower-http = { version = "0.6.2", features = ["cors", "trace", "timeout"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
schemars = "0.8.22"

# hyper = { version = "0.14", features = ["client", "runtime"] }
